[project]
name = "MC2ACAB"
version = "0.1.0"
authors = [
   { name = "Miguel Magan", email = "mmagan@essbilbao.org"},
   { name = "Octavio Gonzalez", email = "ogonzalez@essbilbao.org"}
]
description = "Tools for getting MCNP data and generate an ACAB input with it"
readme = "README.md"
requires-python = ">=3.7"
license = { text ="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["numpy", "setuptools"]
build-backend = "setuptools.build_meta"
